Bug 177982 - freezes for about one minute when strigi/nepomuk is enabled
Summary: freezes for about one minute when strigi/nepomuk is enabled
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-17 14:14 UTC by simon
Modified: 2008-12-18 17:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2008-12-17 14:14:10 UTC
Version:           Unbekannt (using 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.26-tuxonice

hi,

when activating strigi something is blocking input events and systemsettings remains unresponsive up to one minute- progressbar/info?
Comment 1 FiNeX 2008-12-18 14:07:59 UTC
*** This bug has been confirmed by popular vote. ***
Comment 2 FiNeX 2008-12-18 14:08:22 UTC
I hope that nepomuk is a more appropriate "product"
Comment 3 Sebastian Trueg 2008-12-18 14:34:43 UTC
already on my todo list. the strigi service is building some internal structures in that time.
Comment 4 Sebastian Trueg 2008-12-18 17:33:17 UTC
SVN commit 898659 by trueg:

Build and monitor the file system tree in another thread.

BUG: 177982


 M  +57 -7     filesystemwatcher.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=898659