Build and monitor the file system tree in another thread.

BUG: 177982

svn path=/trunk/KDE/kdebase/runtime/; revision=898659